Closed Bug 1672593 Opened 5 years ago Closed 5 years ago

Paragraph offsets wrong when starting from inline content and there is a block element afterwards

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

VERIFIED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- fixed
firefox84 --- verified

People

(Reporter: Jamie, Assigned: Jamie)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Discovered in https://phabricator.services.mozilla.com/D94024?id=355290#inline-533431.

STR (with the NVDA screen reader):

  1. Open this test case:
    data:text/html,<a href="https://mozilla.org/">a</a><p>b</p>
  2. Focus the document.
  3. Press NVDA+control+z to open the NVDA python Console.
  4. Enter the following command and press enter:
    focus.IAccessibleTextObject.textAtOffset(0, 3)
    • Expected: (0, 1, ' ')
    • Actual: (0, 2, ' ')

(Removed unintentional comment.)

Pushed by mzehe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/95f37d6e239c When calculating the paragraph end offset starting from an inline child and a block boundary is found, stop on the boundary, not after it. r=MarcoZ
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

Verified fixed in Firefox 84.0a1 (20201022215159).

Status: RESOLVED → VERIFIED

Comment on attachment 9183090 [details]
Bug 1672593: When calculating the paragraph end offset starting from an inline child and a block boundary is found, stop on the boundary, not after it.

Beta/Release Uplift Approval Request

  • User impact if declined: Users of assistive technologies could get wrong information which text is contained within a paragraph under some circumstances.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None.
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Adds one more condition for a paragraph's end offset, has test coverage.
  • String changes made/needed: None.
Attachment #9183090 - Flags: approval-mozilla-beta?

Comment on attachment 9183090 [details]
Bug 1672593: When calculating the paragraph end offset starting from an inline child and a block boundary is found, stop on the boundary, not after it.

Verified on Nightly and we are early in beta, uplift approved for 83 beta 4, thanks.

Attachment #9183090 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: