Bug 1672593: When calculating the paragraph end offset starting from an inline child and a block boundary is found, stop on the boundary, not after it. r=MarcoZ, a=pascal

Differential Revision: https://phabricator.services.mozilla.com/D94407